--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ Flask-Bcrypt==0.7.1
 Flask-Cors==3.0.8
 Flask-JWT-Extended==3.24.1
 Flask-MySQLdb==0.2.0
+gunicorn==20.0.4
 http-ece==1.1.0
 idna==2.9
 itsdangerous==1.1.0
